<resources>
    <string name="app_name">BackgroundThreads</string>
    <string name="start_thread">Start Thread</string>
    <string name="stop_thread">Stop Thread</string>
    <string name="task_a">Looper</string>
    <string name="task_b">Handler</string>
    <string name="task_c">Handler Thread</string>
    <string name="task_d">Async Task</string>
    <string name="start">Start</string>
</resources>